CSS No Wrap & Mailing Fix

--- a/styles/Projects.scss
+++ b/styles/Projects.scss
@@ -13,7 +13,7 @@
   
   .project {
     display: flex;
-    flex-wrap: wrap;
+    //flex-wrap: wrap;
     justify-content: space-between;
     gap: 80px;
     width: clamp(300px, 850px, 850px);
